# gousto-recipe-manager

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: README.md  pyproject.toml
backend/api/: api.py  dependencies.py  serializers.py
backend/bruno/: autocomplete-categories.yml  autocomplete-recipes.yml  collection.yml  get-categories.yml  get-cuisines.yml  get-recipe-by-id.yml  get-recipe-by-slug.yml  get-recipes.yml  opencollection.yml  recipes-autocomplete.yml  recipes.yml
backend/db/: session.py
backend/ingestion/: api.py  ingestor.py  loader.py  transformer.py
backend/models/: __init__.py  associations.py  category.py  cuisine.py  ingredient.py  macros.py  recipe.py  theme.py
backend/schemas/: ingredient.py  recipe.py
frontend/: tsconfig.tsbuildinfo  vite.config.js
frontend/api/: client.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: recipe.ts
frontend/src/components/app/: app-sidebar.tsx  theme-toggle.tsx
frontend/src/components/ui/: skeleton.tsx
frontend/src/features/recipes/: utils.ts
frontend/src/features/recipes/api/: recipe.ts
frontend/src/features/recipes/components/: recipe-card.tsx  recipe-grid.tsx  recipe-search.tsx  recipes-pagination.tsx
frontend/src/features/recipes/hooks/: useDebounce.ts  useRecipes.ts
frontend/src/features/recipes/pages/: recipes.tsx
frontend/src/features/recipes/types/: recipe.ts
frontend/src/layouts/: main-layout.tsx
frontend/src/pages/: home.tsx  recipes.tsx
frontend/src/routes/: index.tsx
frontend/src/types/: recipe.ts
