[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "ingredient-parser-nlp>=2.6.0",
    "pydantic>=2.13.4",
    "ruff>=0.15.12",
]
